header: correct text logo sometimes overflowing and wrapping

--- a/resources/scss/header.scss
+++ b/resources/scss/header.scss
@@ -266,6 +266,10 @@ menu > nav > .nav-section:last-of-type > .nav-links {
     animation: header-logo-anim 0.6s;
     transition: margin 0.8s, min-width 0.5s;
     will-change: transform;
+    
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
 
     background: var(--bg-1);
 
